--- a/src/main/resources/HomeProvider.fxml
+++ b/src/main/resources/HomeProvider.fxml
@@ -5,125 +5,105 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderMenuController"> <!--xmlns="http://javafx.com/javafx/16"-->
-   <children>
-      <AnchorPane prefHeight="46.0" prefWidth="200.0" style="-fx-background-color: #002d40;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <ImageView fx:id="exit" fitHeight="24.0" fitWidth="24.0" layoutX="774.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/exit.png" />
-               </image>
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.CarLounge.fis.controller.ProviderMenuController"> <!--xmlns="http://javafx.com/javafx/16"-->
+    <AnchorPane prefHeight="46.0" prefWidth="200.0" style="-fx-background-color: #002d40;"
+                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <ImageView fx:id="exit" fitHeight="24.0" fitWidth="24.0" layoutX="774.0" layoutY="11.0"
+                   pickOnBounds="true" preserveRatio="true">
+            <Image url="@Images/exit.png"/>
+        </ImageView>
+        <ImageView fx:id="menu" id="MenuButtonProvider" fitHeight="46.0" fitWidth="32.0" layoutX="7.0" layoutY="7.0" pickOnBounds="true"
+                   preserveRatio="true">
+            <Image url="@Images/menu.png"/>
+        </ImageView>
+    </AnchorPane>
+    <AnchorPane layoutY="46.0" prefHeight="454.0" prefWidth="44.0" style="-fx-background-color: White;"
+                AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+        <VBox alignment="TOP_CENTER" layoutX="1.0" prefHeight="199.0" prefWidth="44.0" spacing="10.0"
+              AnchorPane.topAnchor="20.0">
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/home1.png"/>
             </ImageView>
-            <ImageView fx:id="menu" fitHeight="46.0" fitWidth="32.0" layoutX="7.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Images/menu.png" />
-               </image>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/add1.png"/>
             </ImageView>
-         </children></AnchorPane>
-      <AnchorPane layoutY="46.0" prefHeight="454.0" prefWidth="44.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
-         <children>
-            <VBox alignment="TOP_CENTER" layoutX="1.0" prefHeight="199.0" prefWidth="44.0" spacing="10.0" AnchorPane.topAnchor="20.0">
-               <children>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/home1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/add1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/menu1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/user.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-                     <image>
-                        <Image url="@Images/logout1.jpg" />
-                     </image>
-                  </ImageView>
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="pane1" layoutX="-369.0" layoutY="-21.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <AnchorPane prefHeight="454.0" prefWidth="44.0" style="-fx-background-color: White;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
-         <children>
-            <VBox alignment="TOP_CENTER" layoutX="1.0" prefHeight="199.0" prefWidth="44.0" spacing="10.0" AnchorPane.topAnchor="20.0">
-               <children>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/home1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/add1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/menu1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@Images/user.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-                     <image>
-                        <Image url="@Images/logout1.jpg" />
-                     </image>
-                  </ImageView>
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="pane2" prefHeight="454.0" prefWidth="178.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="40.0">
-         <children>
-            <VBox layoutY="14.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
-               <children>
-                  <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#home" prefHeight="38.0" prefWidth="179.0" text="Home">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
-                  <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#NewListing" prefHeight="38.0" prefWidth="179.0" text="New Listing">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
-                  <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#MyListings" prefHeight="38.0" prefWidth="179.0" text="My Listings">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
-                  <JFXButton alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#ProviderProfile" prefHeight="38.0" prefWidth="179.0" text="My Profile">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
-                  <JFXButton fx:id="logOutOfAcc" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#switchToLogIn" prefHeight="38.0" prefWidth="179.0" stylesheets="@CSS/focusCSS.css" text="Log Out">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </JFXButton>
-               </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="218.0" layoutY="46.0" prefHeight="454.0" prefWidth="583.0">
-         <children>
-            <StackPane fx:id="contentArea" prefHeight="454.0" prefWidth="583.0" />
-         </children>
-      </AnchorPane>
-   </children>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/menu1.png"/>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/user.jpg"/>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true"
+                       rotate="180.0">
+                <Image url="@Images/logout1.jpg"/>
+            </ImageView>
+        </VBox>
+    </AnchorPane>
+    <AnchorPane fx:id="pane1" layoutX="-369.0" layoutY="-21.0" prefHeight="200.0" prefWidth="200.0"
+                style="-fx-background-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-0.0"
+                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+    <AnchorPane prefHeight="454.0" prefWidth="44.0" style="-fx-background-color: White;"
+                AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+        <VBox alignment="TOP_CENTER" layoutX="1.0" prefHeight="199.0" prefWidth="44.0" spacing="10.0"
+              AnchorPane.topAnchor="20.0">
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/home1.png"/>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/add1.png"/>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/menu1.png"/>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@Images/user.jpg"/>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true"
+                       rotate="180.0">
+                <Image url="@Images/logout1.jpg"/>
+            </ImageView>
+        </VBox>
+    </AnchorPane>
+    <AnchorPane fx:id="pane2" prefHeight="454.0" prefWidth="178.0" style="-fx-background-color: white;"
+                AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="40.0">
+        <VBox layoutY="14.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="6.0"
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
+            <JFXButton id="HomeProvider" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#home"
+                       prefHeight="38.0" prefWidth="179.0" text="Home">
+                <font>
+                    <Font size="16.0"/>
+                </font>
+            </JFXButton>
+            <JFXButton id="NewListingProvider" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#NewListing"
+                       prefHeight="38.0" prefWidth="179.0" text="New Listing">
+                <font>
+                    <Font size="16.0"/>
+                </font>
+            </JFXButton>
+            <JFXButton id="MyListingsProvider" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#MyListings"
+                       prefHeight="38.0" prefWidth="179.0" text="My Listings">
+                <font>
+                    <Font size="16.0"/>
+                </font>
+            </JFXButton>
+            <JFXButton id="MyProfileProvider" alignment="BASELINE_LEFT" focusTraversable="false" onMouseClicked="#ProviderProfile"
+                       prefHeight="38.0" prefWidth="179.0" text="My Profile">
+                <font>
+                    <Font size="16.0"/>
+                </font>
+            </JFXButton>
+            <JFXButton fx:id="logOutOfAcc" id="LogOutOfAccountProvider" alignment="BASELINE_LEFT" focusTraversable="false"
+                       onMouseClicked="#switchToLogIn" prefHeight="38.0" prefWidth="179.0"
+                       stylesheets="@CSS/focusCSS.css" text="Log Out">
+                <font>
+                    <Font size="16.0"/>
+                </font>
+            </JFXButton>
+        </VBox>
+    </AnchorPane>
+    <AnchorPane layoutX="218.0" layoutY="46.0" prefHeight="454.0" prefWidth="583.0">
+        <StackPane fx:id="contentArea" prefHeight="454.0" prefWidth="583.0"/>
+    </AnchorPane>
 </AnchorPane>
