--- a/src/main/resources/cars.fxml
+++ b/src/main/resources/cars.fxml
@@ -6,35 +6,27 @@
 <?import javafx.scene.text.*?>
 
 <StackPane prefHeight="454.0" prefWidth="583.0" stylesheets="@CSS/focusCSS.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.CarsController">
-   <children>
-        <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
-            <top>
-                <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label layoutX="14.0" layoutY="7.0" text="Available cars">
-                     <font>
+    <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
+        <top>
+            <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
+                <Label layoutX="14.0" layoutY="7.0" text="Available cars">
+                    <font>
                         <Font name="System Bold" size="14.0" />
-                     </font></Label>
-                        <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
-                    </children>
-                </Pane>
-            </top>
-         <center>
+                    </font>
+                </Label>
+                <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
+            </Pane>
+        </top>
+        <center>
             <ListView fx:id="carList" focusTraversable="false" prefHeight="200.0" prefWidth="560.0" BorderPane.alignment="CENTER" />
-         </center>
-         <right>
+        </center>
+        <right>
             <AnchorPane prefHeight="414.0" prefWidth="155.0" BorderPane.alignment="CENTER">
-               <children>
-                  <JFXButton fx:id="rent" buttonType="RAISED" focusTraversable="false" layoutX="4.0" layoutY="195.0" onMouseClicked="#rentACar" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #D1E4F9;" text="Rent it!">
-                     <graphic>
-                        <TextField fx:id="noPlate" alignment="CENTER" prefHeight="25.0" prefWidth="82.0" promptText="E.g. AR15LLL" style="-fx-background-radius: 50;" />
-                     </graphic>
-                  </JFXButton>
-                  <Text fx:id="rentalMessage" layoutX="3.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="149.06640625" />
-                  <Text fx:id="contactDetails" layoutX="2.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="151.06640625" />
-               </children>
+                <JFXButton id="ClientRentButton" fx:id="rent" alignment="CENTER_RIGHT" buttonType="RAISED" focusTraversable="false" layoutX="3.0" layoutY="195.0" onMouseClicked="#rentACar" prefHeight="50.0" prefWidth="149.0" style="-fx-background-color: #D1E4F9;" text="Rent it!" />
+                <Text id="ClientRentalMessage" fx:id="rentalMessage" layoutX="3.0" layoutY="260.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="149.06640625" />
+                <Text fx:id="contactDetails" layoutX="2.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="151.06640625" />
+                  <TextField id="ClientNumberPlate" fx:id="noPlate" alignment="CENTER" focusTraversable="false" layoutX="4.0" layoutY="208.0" prefHeight="25.0" prefWidth="59.0" promptText="AR99FIS" style="-fx-background-radius: 50;" />
             </AnchorPane>
-         </right>
-        </BorderPane>
-   </children>
+        </right>
+    </BorderPane>
 </StackPane>
